# chat-app

./: .env  .gitignore  README.md  docker-compose.yml  template.env
server/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
server/app/: deps.py  main.py  prestart.py
server/app/core/: logger.py  notification.py
server/app/core/config/: __init__.py  _settings.py
server/app/core/security/: password.py
server/app/core/security/token/: __init__.py  base.py
server/app/crud/: __init__.py  base.py  crud_chat.py  crud_message.py  crud_user.py
server/app/db/: base.py  base_class.py  session.py
server/app/db/migration/: env.py  script.py.mako
server/app/db/migration/versions/: 00c5a5f78858_initial_tables.py
server/app/endpoints/: auth.py  chats.py  helper.py  messages.py  notifications.py  users.py
server/app/endpoints/chats/: __init__.py
server/app/models/: __init__.py  chat.py  message.py  user.py
server/app/schemas/: __init__.py  auth.py  base.py  chat.py  message.py  search.py  user.py
web/: .gitignore  .lintstagedrc.js  .prettierignore  .prettierrc.js  Dockerfile  env.d.ts  package.json  tsconfig.json
web/src/app/: layout.tsx  loading.tsx  page.tsx  utils.ts
web/src/app/components/ThemeRegistry/: index.tsx
web/src/components/: Header.tsx  Main.tsx
web/src/components/ThemeRegistry/: EmotionCache.tsx  theme.ts
web/src/constants/: auth.ts
web/src/lib/: context.ts  swr.tsx
web/src/models/: user.ts
web/src/services/api/: axiosInstance.ts  index.ts  instance.ts
